@@ -1,3 +1,14 @@
+2007-03-08  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpblendtool.h (struct GimpBlendTool): renamed
+	members and added last_x and last_y to remember the last mouse
+	coords.
+
+	* app/tools/gimpblendtool.c: changed accordingly. Take drawable
+	offset into account in button_release() and remove offset
+	calculations from all other places. Enabled using ALT for moving
+	the entire line.
+
 2007-03-08  Sven Neumann  <sven@gimp.org>
 
 	* app/base/pixel-surround.c (pixel_surround_get_data): do one less
